--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Microverse Portfolio Website</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        
+        <nav id="mobile-navbar">
+            <img src="assets/menu.png" alt="">
+        </nav>
     </header>
 </body>
 </html>
