Mobile version background imagae section added

--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
             <img src="assets/menu.png" alt="">
         </nav>
     </header>
+    <section id="background-image">
+
+    </section>
 </body>
 </html>
