updated flexbox to allign items

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         <section id="arrow-down">
             
-            <a href=""></a><img src="assets/icons/button_down.png" alt="">
+            <a href="#"></a><img src="assets/icons/button_down.png" alt="">
         </section>
     </section>
 
