--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </span>
                 
             </h1>   
-                 
+
             <p>
                 I can help you build a product, feature or website Look through some
                 of my work and experience! If you like what you see and have a project
@@ -52,6 +52,16 @@
             </section>
 
         </div>
+    </section>
+
+    <section id="work-section">
+        <h1>
+            <span id="work-heading">
+                My Recent<br>
+            Work
+            </span>
+        </h1>
+        <hr>
     </section>
 
 </body>
