updated work section

--- a/index.html
+++ b/index.html
@@ -61,7 +61,21 @@
             Work
             </span>
         </h1>
-        <hr>
+        
+        <section id="line">
+            <hr>
+        </section>
+      
+    </section>
+      <!--Project Work Cards-->
+      <section id="Projects-card">
+        <div id="one"></div>
+        <div id="two">
+            hello world
+            fdf
+            fllll
+        </div>
+
     </section>
 
 </body>
