Updated Projects Card

--- a/index.html
+++ b/index.html
@@ -68,13 +68,25 @@
       
     </section>
       <!--Project Work Cards-->
-      <section id="Projects-card">
-        <div id="one"></div>
-        <div id="two">
-            hello world
-            fdf
-            fllll
+      <section id="projects-card">
+        <div class="project">
+            <div class="image"></div>
+            <div class="content">
+                <h3>
+                    Multi-Post Stories <br>
+                    Gain+Glory
+                </h3>
+                <ul class="languages">
+                    <li>Ruby on Rails</li>
+                    <li>CSS</li>
+                    <li>Javascript</li>
+                    <li>HTML</li>
+                </ul>
+
+                <button class="greenbtn">See Project</button>
+            </div>
         </div>
+        
 
     </section>
 
