updated project list items colors

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         <li>HTML</li>
                     </ul>
                     <div class="btn">
-                        <button class="greenbtn">red Project</button>
+                        <button class="greenbtn">See project</button>
                     </div>
                 </div>
             </div>
@@ -103,7 +103,7 @@
                     <li>HTML</li>
                 </ul>
                 <div class="btn">
-                    <button class="greenbtn">red Project</button>
+                    <button class="greenbtn">See project</button>
                 </div>
             </div>
         </div>
@@ -123,7 +123,7 @@
                 </ul>
                 
                 <div class="btn">
-                    <button class="greenbtn">red Project</button>
+                    <button class="greenbtn">See project</button>
                 </div>
 
 
