--- a/index.html
+++ b/index.html
@@ -213,7 +213,16 @@
     </section>
 
     <section id="about-myself">
-        <h1</h1>
+
+        <h1>
+            <span id="aboutme-heading">  About me</span>
+           
+        </h1>
+
+        <p>I can help you build a product , feature or website Look through some
+            of my work and experience! If you like what you see and have a project
+            you need coded, don't hesitate to contact me.</p>
+
 
     </section>
 
