updated the bottom left icon of about section

--- a/index.html
+++ b/index.html
@@ -225,6 +225,13 @@
                 of my work and experience! If you like what you see and have a project
                 you need coded, don't hesitate to contact me.</p>
         </div>
+        <div class="bottomleft">
+            <div class="btn">
+                <button class="greenbtn">
+                    Get my resume
+                </button>
+            </div>
+        </div>
 
        
 
