updated framework div section

--- a/index.html
+++ b/index.html
@@ -256,9 +256,10 @@
 
             <ul class="portfolio-languages">
                 <li>React.js</li>
-                <li>Ruby</li>
-                <li>HTML</li>
-                <li>CSS</li>
+                <li>Ruby on Rails</li>
+                <li>RSpec</li>
+                <li>Capybara</li>
+                <li>Selenium</li>
             </ul>
            
 
