updated the Skills section

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
         </div>
 
         <div class="portfolio-details">
-            <img src="assets/languages-icon.svg" alt="">
+            <img src="assets/icon-frameworks.svg" alt="">
             <h1>Frameworks</h1>
 
             <ul class="portfolio-languages">
@@ -266,14 +266,15 @@
         </div>
 
         <div class="portfolio-details">
-            <img src="assets/languages-icon.svg" alt="">
-            <h1>languages</h1>
+            <img src="assets/skills-icon.svg" alt="">
+            <h1>Skills</h1>
 
             <ul class="portfolio-languages">
-                <li>Javascript</li>
-                <li>Ruby</li>
-                <li>HTML</li>
-                <li>CSS</li>
+                <li>Database Management</li>
+                <li>Version Control</li>
+                <li>Cli</li>
+                <li>Web Development</li>
+                <li>Api Design</li>
             </ul>
            
 
