--- a/index.html
+++ b/index.html
@@ -253,5 +253,10 @@
         </div>
        </section>
     </section>  
+
+    <section id="contact-form">
+        <p>I'm always interested in hearing about new projects, so if you you'd like to chat please get in touch</p>
+
+    </section>
 </body>
 </html>
