--- a/index.html
+++ b/index.html
@@ -256,7 +256,15 @@
 
     <section id="contact-form">
         <p>I'm always interested in hearing about new projects, so if you you'd like to chat please get in touch</p>
+        <div>
+            <form action="https://formspree.io/f/mgebgadd" method="post">
 
+                <input type="text" id="name" type="text" placeholder="Full name" maxlength="30" required > <br>
+                <input name="Email" id="email" type="email" placeholder="Email address" required>
+                <textarea name="textarea" id="textarea" placeholder="Hey I'd like to connect to..." maxlength="50" required></textarea>
+                <button type="submit">Get in touch</button>
+            </form>
+        </div>
     </section>
 </body>
 </html>
