--- a/index.html
+++ b/index.html
@@ -258,12 +258,13 @@
         <p>I'm always interested in hearing about new projects, so if you you'd like to chat please get in touch</p>
         <div>
             <form action="https://formspree.io/f/mgebgadd" method="post">
-
-                <input type="text" id="name" type="text" placeholder="Full name" maxlength="30" required > <br>
-                <input name="Email" id="email" type="email" placeholder="Email address" required>
-                <textarea name="textarea" id="textarea" placeholder="Hey I'd like to connect to..." maxlength="50" required></textarea>
-                <button type="submit">Get in touch</button>
+                <input type="text" id="name" type="text" placeholder="Full name" maxlength="30"   required >
+                <input name="Email" id="email" type="email" placeholder="Email address"   required>
+                <textarea name="textarea" id="textarea" placeholder="Hey I'd like to connect to..." maxlength="50"  required></textarea>
+                <button type="submit" class="greenbtn">Get in touch</button>
             </form>
+
+            <p>abdussalamabro@gmail.com</p>
         </div>
     </section>
 </body>
