added email span in contact section

--- a/index.html
+++ b/index.html
@@ -262,9 +262,10 @@
                 <input name="Email" id="email" type="email" placeholder="Email address"   required>
                 <textarea name="textarea" id="textarea" placeholder="Hey I'd like to connect to..." maxlength="50"  required></textarea>
                 <button type="submit" class="greenbtn">Get in touch</button>
+                <span>abdussalamabro@gmail.com</span>
             </form>
 
-            <p>abdussalamabro@gmail.com</p>
+            
         </div>
     </section>
 </body>
