updated footer section

--- a/index.html
+++ b/index.html
@@ -268,5 +268,21 @@
             
         </div>
     </section>
+
+    <footer>
+        <section id="social-icons">
+            <ul>
+                <li><a href="https://twitter.com/Abdul_SalamAbro"><img src="assets/icons/twitter.png" alt=""></a></li>
+                <li><a href="https://www.linkedin.com/in/abdul-salam-abro/"><img src="assets/icons/linkedin.png" alt=""></a></li>
+                <li><a href="https://medium.com/abdulsalam"><img src="assets/icons/medium.png" alt=""></a></li>
+                <li><a href="https://github.com/AbdulSalamAbro"><img src="assets/icons/github.png" alt=""></a></li>
+                <li><a href="https://venture.angellist.com/v/Abdulsalam"><img src="assets/icons/angellist.png" alt=""></a></li>  
+            </ul>
+        </section>
+
+        <div id="footer-line">
+            <hr>
+        </div>
+    </footer>
 </body>
 </html>
