--- a/index.html
+++ b/index.html
@@ -256,12 +256,12 @@
 
     <section id="contact-form">
         <p>I'm always interested in hearing about new projects, so if you you'd like to chat please get in touch</p>
-        <div>
-            <form action="https://formspree.io/f/mgebgadd" method="post">
-                <input type="text" id="name" type="text" placeholder="Full name" maxlength="30"   required >
-                <input name="Email" id="email" type="email" placeholder="Email address"   required>
-                <textarea name="textarea" id="textarea" placeholder="Hey I'd like to connect to..." maxlength="50"  required></textarea>
-                <button type="submit" class="greenbtn">Get in touch</button>
+        <div class="inputs">
+            <form class="contact" action="https://formspree.io/f/mgebgadd" method="post">
+                <input class="form1" type="text" id="name" type="text" placeholder="Full name" maxlength="30"   required ><br>
+                <input class="form2" name="Email" id="email" type="email" placeholder="Email address"   required><br>
+                <textarea class="text_form" name="textarea" id="textarea" placeholder="Hey I'd like to connect to..." maxlength="50"  required></textarea><br>
+                <button class="form_btn" type="submit" class="greenbtn">Get in touch</button><br>
                 <span>abdussalamabro@gmail.com</span>
             </form>
 
