fixed the issues and make form in center

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                 <input class="form1" type="text" id="name" type="text" placeholder="Full name" maxlength="30"   required ><br>
                 <input class="form2" name="Email" id="email" type="email" placeholder="Email address"   required><br>
                 <textarea class="text_form" name="textarea" id="textarea" placeholder="Hey I'd like to connect to..." maxlength="50"  required></textarea><br>
-                <button class="form_btn" type="submit" class="greenbtn">Get in touch</button><br><br><br>
+                <button class="greenbtn" type="submit" class="greenbtn">Get in touch</button>
                 <span>abdussalamabro@gmail.com</span>
             </form>
 
