set the work section cards in desktop version

--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
     <header>
         <nav id="mobile-navbar">
             <img src="assets/menu.png" alt="">
+
+            <ul>
+                <li><a href="#home"></a>Portfolio</li>
+                <li><a href="#About"></a>About</li>
+                <li><a href="#Contact"></a>Contact</li>
+            
+            </ul>
         </nav>
     </header>
     <section id="headline-section">
