Added desktop navbar

--- a/index.html
+++ b/index.html
@@ -14,15 +14,16 @@
     <header>
         <nav id="mobile-navbar">
             <img src="assets/menu.png" alt="">
-
-            <ul>
-                <li><a href="#home"></a>Portfolio</li>
-                <li><a href="#About"></a>About</li>
-                <li><a href="#Contact"></a>Contact</li>
-            
-            </ul>
         </nav>
     </header>
+    <header id="navbar-grid">
+        <nav id="desktop-navbar">
+            <a href="#home">Portfolio</a>
+            <a href="#About">About</a>
+            <a href="#Contact">Contact</a> 
+    </nav>
+    </header>
+
     <section id="headline-section">
         <div class="container">
             <h1 >
