fixed header section and its background

--- a/index.html
+++ b/index.html
@@ -16,23 +16,24 @@
             <img src="assets/menu.png" alt="">
         </nav>
     </header>
-    <header id="navbar-grid">
-        <nav id="desktop-navbar">
-            <a href="#home">Portfolio</a>
-            <a href="#About">About</a>
-            <a href="#Contact">Contact</a> 
-    </nav>
-    </header>
+  
 
     <section id="headline-section">
+        <header id="navbar-grid">
+            <nav id="desktop-navbar">
+                <a href="#home">Portfolio</a>
+                <a href="#About">About</a>
+                <a href="#Contact">Contact</a> 
+        </nav>
+        </header>
         <div class="container">
             <h1 >
                 <span id="name-heading">
-                    Hey there<br>
+                    Hey there
                 I'm Abdul Salam
                 </span>
                 <span id="job-role">
-                    I',m a Software<br>
+                    I',m a Software
                     Developer
                 </span>
                 
