--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
     </section>  
 
     <section id="contact-form">
-        <p>I'm always interested in hearing about new projects, so if you you'd like to chat please get in touch</p>
+        <p>I'm always interested in hearing about new projects, so if you'd like to chat please get in touch</p>
         <div class="inputs">
             <form class="contact" action="https://formspree.io/f/mgebgadd" method="post">
                 <input class="form1" type="text" id="name" type="text" placeholder="Full name" maxlength="30"   required ><br>
