--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <nav id="mobile-navbar">
-            <img src="assets/menu.png" alt="">
+            <img src="assets/menu.png" alt="mobile-menu-icon">
         </nav>
     </header>
   
