--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <nav id="mobile-navbar">
-            <img src="assets/menu.png" alt="">
+            <img src="assets/menu.png" alt="Menu icon">
         </nav>
     </header>
   
@@ -48,16 +48,16 @@
            
               <section id="social-icons">
                 <ul>
-                    <li><a href="https://twitter.com/Abdul_SalamAbro"><img src="assets/icons/twitter.png" alt=""></a></li>
-                    <li><a href="https://www.linkedin.com/in/abdul-salam-abro/"><img src="assets/icons/linkedin.png" alt=""></a></li>
-                    <li><a href="https://medium.com/abdulsalam"><img src="assets/icons/medium.png" alt=""></a></li>
-                    <li><a href="https://github.com/AbdulSalamAbro"><img src="assets/icons/github.png" alt=""></a></li>
-                    <li><a href="https://venture.angellist.com/v/Abdulsalam"><img src="assets/icons/angellist.png" alt=""></a></li>  
+                    <li><a href="https://twitter.com/Abdul_SalamAbro"><img src="assets/icons/twitter.png" alt="Twitter icon"></a></li>
+                    <li><a href="https://www.linkedin.com/in/abdul-salam-abro/"><img src="assets/icons/linkedin.png" alt="LinkedIn icon"></a></li>
+                    <li><a href="https://medium.com/abdulsalam"><img src="assets/icons/medium.png" alt="Medium icon"></a></li>
+                    <li><a href="https://github.com/AbdulSalamAbro"><img src="assets/icons/github.png" alt="Github icon"></a></li>
+                    <li><a href="https://venture.angellist.com/v/Abdulsalam"><img src="assets/icons/angellist.png" alt="AngelList icon"></a></li>  
                 </ul>
             </section>
             <section id="arrow-down">
                 
-                <a href="#"></a><img src="assets/icons/button_down.png" alt="">
+                <a href="#"></a><img src="assets/icons/button_down.png" alt="Arrow down icon">
             </section>
 
         </div>
@@ -224,7 +224,7 @@
        <section id="portfolio-skills">
 
         <div class="portfolio-details">
-            <img src="assets/languages-icon.svg" alt="">
+            <img src="assets/languages-icon.svg" alt="Languages icon">
             <h4>languages</h4>
 
             <ul class="portfolio-languages">
@@ -236,7 +236,7 @@
         </div>
 
         <div class="portfolio-details">
-            <img src="assets/icon-frameworks.svg" alt="">
+            <img src="assets/icon-frameworks.svg" alt="Frameworks icon">
             <h4>Frameworks</h4>
 
             <ul class="portfolio-languages">
@@ -249,7 +249,7 @@
         </div>
 
         <div class="portfolio-details">
-            <img src="assets/skills-icon.svg" alt="">
+            <img src="assets/skills-icon.svg" alt="Skills icon">
             <h4>Skills</h4>
 
             <ul class="portfolio-languages">
@@ -290,11 +290,11 @@
     <footer>
         <section id="social-icons">
             <ul>
-                <li><a href="https://twitter.com/Abdul_SalamAbro"><img src="assets/icons/twitter.png" alt=""></a></li>
-                <li><a href="https://www.linkedin.com/in/abdul-salam-abro/"><img src="assets/icons/linkedin.png" alt=""></a></li>
-                <li><a href="https://medium.com/abdulsalam"><img src="assets/icons/medium.png" alt=""></a></li>
-                <li><a href="https://github.com/AbdulSalamAbro"><img src="assets/icons/github.png" alt=""></a></li>
-                <li><a href="https://venture.angellist.com/v/Abdulsalam"><img src="assets/icons/angellist.png" alt=""></a></li>  
+                <li><a href="https://twitter.com/Abdul_SalamAbro"><img src="assets/icons/twitter.png" alt="Twitter icon"></a></li>
+                <li><a href="https://www.linkedin.com/in/abdul-salam-abro/"><img src="assets/icons/linkedin.png" alt="LinkedIn icon"></a></li>
+                <li><a href="https://medium.com/abdulsalam"><img src="assets/icons/medium.png" alt="Medium icon"></a></li>
+                <li><a href="https://github.com/AbdulSalamAbro"><img src="assets/icons/github.png" alt="Github icon"></a></li>
+                <li><a href="https://venture.angellist.com/v/Abdulsalam"><img src="assets/icons/angellist.png" alt="AngelList icon"></a></li>  
             </ul>
         </section>
 
